--- a/app/src/main/res/layout/fragment_test_home.xml
+++ b/app/src/main/res/layout/fragment_test_home.xml
@@ -117,7 +117,7 @@
 
                         <ImageView
                             android:id="@+id/ivNumbers"
-                            android:layout_width="wrap_content"
+                            android:layout_width="180dp"
                             android:layout_height="120dp"
                             android:layout_marginTop="8dp"
                             android:layout_marginEnd="8dp"
@@ -130,10 +130,11 @@
                         <Button
                             android:id="@+id/btnStartNumbers"
                             style="@style/Widget.MaterialComponents.Button.TextButton"
-                            android:layout_width="64dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/button_start"
-                            android:textColor="@color/colorRed"
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/colorRedDark"
                             app:iconTint="@color/colorRed"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent" />
@@ -187,7 +188,7 @@
 
                         <ImageView
                             android:id="@+id/ivGreetings"
-                            android:layout_width="wrap_content"
+                            android:layout_width="180dp"
                             android:layout_height="120dp"
                             android:layout_marginTop="8dp"
                             android:layout_marginEnd="8dp"
@@ -200,10 +201,11 @@
                         <Button
                             android:id="@+id/btnStartGreetings"
                             style="@style/Widget.MaterialComponents.Button.TextButton"
-                            android:layout_width="64dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/button_start"
-                            android:textColor="@color/colorRed"
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/colorRedDark"
                             app:iconTint="@color/colorRed"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent" />
@@ -255,7 +257,7 @@
 
                         <ImageView
                             android:id="@+id/ivFood"
-                            android:layout_width="wrap_content"
+                            android:layout_width="180dp"
                             android:layout_height="120dp"
                             android:layout_marginTop="8dp"
                             android:layout_marginEnd="8dp"
@@ -268,10 +270,11 @@
                         <Button
                             android:id="@+id/btnStartFood"
                             style="@style/Widget.MaterialComponents.Button.TextButton"
-                            android:layout_width="64dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/button_start"
-                            android:textColor="@color/colorRed"
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/colorRedDark"
                             app:iconTint="@color/colorRed"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent" />
@@ -323,7 +326,7 @@
 
                         <ImageView
                             android:id="@+id/ivHelp"
-                            android:layout_width="wrap_content"
+                            android:layout_width="180dp"
                             android:layout_height="120dp"
                             android:layout_marginTop="8dp"
                             android:layout_marginEnd="8dp"
@@ -336,10 +339,11 @@
                         <Button
                             android:id="@+id/btnStartHelp"
                             style="@style/Widget.MaterialComponents.Button.TextButton"
-                            android:layout_width="64dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/button_start"
-                            android:textColor="@color/colorRed"
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/colorRedDark"
                             app:iconTint="@color/colorRed"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent" />
