--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -16,6 +16,10 @@
         android:icon="@drawable/outline_perm_identity_black_48dp"
         android:title="@string/title_profile" />
 
+    <item
+        android:id="@+id/navigation_dashboard"
+        android:icon="@drawable/outline_perm_identity_black_48dp"
+        android:title="Dashboard" />"
 
 
 </menu>
